tests/snapshots/ui_snapshot__scroll_down_in_diff_keeps_sticky_header.snap
---
source: tests/ui_snapshot.rs
expression: "frame(&app, 80, 14)"
---
" Diff   Files                                            main · uncommitted · ◉ "
"────────────────────────────────────────────────────────────────────────────────"
"┌ Changes  +3 −3  0/1 ─────────┐┌──────────────────────────────────────────────┐"
"│  M big.txt                   ││big.txt  +3 −3  [1/1]                         │"
"│                              ││17 17   line17                               ││"
"│                              ││18 18   line18                               ││"
"│                              ││19 19   line19                               █│"
"│                              ││20    ▌ line20                               █│"
"│                              ││   20 ▌ LINE20                               ││"
"│                              ││21 21   line21                               ││"
"│                              ││22 22   line22                               ││"
"│                              ││23 23   line23                               ││"
"└──────────────────────────────┘└──────────────────────────────────────────────┘"
"j/k move  Tab focus  n/p file  ]/[ hunk  c compare  b ref  o context  Space revi"
