tests/snapshots/ui_snapshot__search_jumps_to_match.snap
---
source: tests/ui_snapshot.rs
expression: "frame(&app, 80, 14)"
---
" Diff [1]   Files [2]   <repo>
"gdiff · main · uncommitted · 1 file  +1 −1 · 0/1 reviewed · ◉ watching          "
"┌Files (1)─────────────────────┐┌──────────────────────────────────────────────┐"
"│  M big.txt                   ││big.txt  +1 −1  [1/1]                         │"
"│                              ││28 28   line28                               ││"
"│                              ││29 29   line29                               █│"
"│                              ││30    ▌ line30                               █│"
"│                              ││   30 ▌ LINE30                               █│"
"│                              ││31 31   line31                               █│"
"│                              ││32 32   line32                               ││"
"│                              ││33 33   line33                               ││"
"│                              ││ ⋯ 7 unchanged lines (Enter to expand) ⋯     ││"
"└──────────────────────────────┘└──────────────────────────────────────────────┘"
"/LINE30   n/N next·prev · Esc close                                             "
