tests/snapshots/ui_snapshot__side_by_side_view_shows_two_columns.snap
---
source: tests/ui_snapshot.rs
assertion_line: 210
expression: "frame(&app, 80, 12)"
---
" Diff [1]   Repo [2]                                     main · uncommitted · ◉ "
"────────────────────────────────────────────────────────────────────────────────"
"┌ Changes  +1 −1  0/1 ───────────┐┌────────────────────────────────────────────┐"
"│ M   a.txt                      ││a.txt  +1 −1  [1/1]                         │"
"│                                ││ 1 one               │ 1 one                │"
"│                                ││ 2 two               │ 2 TWO                │"
"│                                ││ 3 three             │ 3 three              │"
"│                                ││                                            │"
"│                                ││                                            │"
"│                                ││                                            │"
"└────────────────────────────────┘└────────────────────────────────────────────┘"
"]/[ hunk  n/p file  Space review  s split  / find  c compare  ? help            "
