tests/snapshots/ui_snapshot__tree_shows_compacted_directories.snap
---
source: tests/ui_snapshot.rs
expression: "frame(&app, 80, 12)"
---
" Diff [1]   Files [2]   <repo>
"gdiff · main · uncommitted · 2 files  +2 −2 · 0/2 reviewed · ◉ watching         "
"┌Files (2)─────────────────────┐┌──────────────────────────────────────────────┐"
"│▾ src/app/                    ││src/app/mod.rs  +1 −1  [2/2]                  │"
"│    M mod.rs                  ││@@ -1,1 +1,1 @@                               │"
"│  M README.md                 ││ 1    ▌ fn run() {}                           │"
"│                              ││    1 ▌ fn run() { go(); }                    │"
"│                              ││                                              │"
"│                              ││                                              │"
"│                              ││                                              │"
"└──────────────────────────────┘└──────────────────────────────────────────────┘"
"j/k move  Tab focus  n/p file  ]/[ hunk  c compare  b ref  Space review  s split"
