tests/snapshots/ui_snapshot__unified_single_file_modify.snap
---
source: tests/ui_snapshot.rs
assertion_line: 86
expression: "frame(&app, 80, 14)"
---
" Diff [1]   Repo [2]                                     main · uncommitted · ◉ "
"────────────────────────────────────────────────────────────────────────────────"
"┌ Changes  +1 −1  0/1 ───────────┐┌────────────────────────────────────────────┐"
"│▾ src/                          ││src/lib.rs  +1 −1  [1/1]                    │"
"│    M lib.rs                    ││ 1  1   fn one() {}                         │"
"│                                ││ 2    - fn two() {}                         │"
"│                                ││    2 + fn TWO() {}                         │"
"│                                ││ 3  3   fn three() {}                       │"
"│                                ││                                            │"
"│                                ││                                            │"
"│                                ││                                            │"
"│                                ││                                            │"
"└────────────────────────────────┘└────────────────────────────────────────────┘"
"]/[ hunk  n/p file  Space review  s split  / find  c compare  ? help            "
